    - nth_omega_prime(k,n)            The nth number dvsbl by exactly k primes
    - powerful_numbers([lo,]hi[,k])   array ref of k-powerful from lo to hi
    - powerful_count(n[,k])           count of k-powerful numbers <= n
    - nth_powerful(n[,k])             the nth k-powerful number (default k=2)
    - powerfree_count(n[,k])          count of k-powerfree numbers <= n
    - powerfree_sum(n[,k])            sum of k-powerfree numbers <= n
    - powerfree_part(n[,k])           remove excess powers from n
    - powerfree_part_sum(n[,k])       sum of k-powerfree parts for 1 to n
    - perfect_power_count([lo,] hi)   count of perfect powers
    - smooth_count(n,k)               count of k-smooth numbers <= n
    - rough_count(n,k)                count of k-rough numbers <= n
    - allsqrtmod(a,n)                 all square roots of a (mod n)
    - qnr(n)                          least quadratic non-residue
    - binomialmod(n,k,m)              fast binomial(n,k) mod m
    - negmod(a, n)                    -a mod n
    - submod(a, b, n)                 a - b mod n
    - muladdmod(a, b, c, n)           a * b + c mod n
    - mulsubmod(a, b, c, n)           a * b - c mod n
    - rootmod(a, k, n)                modular k-th root
    - allrootmod(a,k,n)               all k-th roots of a (mod n)
    - cornacchia(d,n)                 find x,y for x^2 + d * y^2 = n
    - vecequal(\@a, \@b)              compare two arrays for equality
    - tozeckendorf(n)                 Zeckendorf binary string from n
    - fromzeckendorf(str)             n from Zeckendorf binary string
    - lucasu(p,q,k)                   U(p,q)_k
    - lucasv(p,q,k)                   V(p,q)_k
    - lucasuv(p,q,k)                  U(p,q)_k, V(p,q)_k
    - lucasumod(p,q,k,n)              U(p,q)_k mod n
    - lucasvmod(p,q,k,n)              V(p,q)_k mod n
    - lucasuvmod(p,q,k,n)             (U(p,q)_k mod n, V(p,q)_k mod n)
    - pisano_period(n)                period of modular Fibonacci sequence