@@ -10,4 +10,6 @@ extern UV powerfree_part(UV n, uint32_t k);
 
 extern UV powerfree_part_sum(UV n, uint32_t k);
 
+extern UV nth_powerfree(UV n, uint32_t k);
+
 #endif
